--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
         "outDir": "dirt/js",
         "target": "ES6",
         "noEmitOnError": true,
-        "noImplicitAny": true
+        "noImplicitAny": true,
+        "removeComments": true,
+        "strictNullChecks": true
     },
     "include": ["app/**/*"]
 }
